白菜价页面

--- a/src/baicaijia/less/common.css
+++ b/src/baicaijia/less/common.css
@@ -70,9 +70,9 @@ table {
   border-collapse: collapse;
 }
 body {
-  font: 12px/150% Arial, Verdana, "\5b8b\4f53";
+  font-family: "微软雅黑";
   /*unitedCode的写法，宋体的写法*/
-  color: #666;
+  font-size: 12px;
   background: #fff;
 }
 /*清除浮动*/
@@ -89,11 +89,12 @@ body {
   *zoom: 1;
 }
 a {
-  color: #666;
+  color: #000;
   text-decoration: none;
 }
 a:hover {
   color: #C81623;
+  text-decoration: none;
 }
 h1,
 h2,
