--- a/src/baicaijia/less/common.less
+++ b/src/baicaijia/less/common.less
@@ -76,8 +76,8 @@ table {
 }
 
 body {
-    font: 12px/150% Arial, Verdana, "\5b8b\4f53"; /*unitedCode的写法，宋体的写法*/
-    color: #666;
+    font-family: "微软雅黑"; /*unitedCode的写法，宋体的写法*/;
+    font-size:12px;
     background: #fff;
 }
 /*清除浮动*/
@@ -96,12 +96,13 @@ body {
 }
 
 a {
-    color: #666;
+    color:#000;
     text-decoration: none;
 }
 
 a:hover {
     color: #C81623;
+    text-decoration: none;
 }
 
 h1,
