--- a/src/baicaijia/less/index.less
+++ b/src/baicaijia/less/index.less
@@ -1,1 +1,117 @@
 @import "common.less";
+html,body,.sort_view,.container,.right{
+    height: 100%;
+}
+.sort_view {
+    padding-top: 88px;
+    position: relative;
+} 
+//头部 
+header{
+  height: 50px;
+    width: 100%;
+    padding: 7px 50px;
+    position: absolute;
+    top: 0;
+    background: #ff841d;
+    .back{
+      position: absolute;
+      padding: 10px;
+      width: 40px;
+      height: 40px;
+      top: 5px;
+      left: 10px;
+      font-size: 20px;
+      color: #fff;
+    }
+    .menu{
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      top: 10px; 
+      right:10px;
+      background-image: url(../../../images/header_app.png);
+      background-repeat: no-repeat;
+      background-size: 35px 35px;
+    }
+    h4{
+      width: 100%;
+      text-align: center;
+      color:#fff;
+      line-height: 40px;
+      font-size: 20px;
+      font-weight: 700;
+    }
+}
+//滚动轮播
+.searchbtn{
+  top:50px;
+  width: 100%;
+  position: absolute; 
+  overflow: hidden;
+  .category_nav{
+    width: 190%;
+    li{
+      height: 38px;
+      font-size: 14px;
+      line-height: 36px;
+      float:left;
+      a{
+        display: block;
+        height: 100%;
+        padding: 0 10px;
+        width: 100%;
+        text-align: center;
+      }
+    }
+    .active{
+      border-bottom: 2px solid red;
+      color:#f10215;
+    }
+  }
+}
+.goodshow{
+  #goods{
+    font-size:14px;
+    font-family: "微软雅黑";
+    font-weight: 500;
+    color:#000;
+    li{
+      margin: 6px auto;
+      background-color: #ffffff;
+      padding: 10px 5px;
+      box-sizing: border-box;
+      overflow: hidden;
+        .gobuy{
+          display:block;
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          z-index: 1;
+        }
+        .pic{
+          position:absolute;
+          top:0;
+          left:0;
+          width: 135px;
+          height: 130px;
+          img{
+            width: 130px;
+            height: 130px;
+            border: none;
+          }
+        }
+        .t{
+          padding-left: 135px;           
+          .y{
+            color:#000;
+            font-size:14px;  
+          }
+          .q{
+            
+          }
+
+        }
+    }
+  }
+}
