--- a/src/baicaijia/less/index.css
+++ b/src/baicaijia/less/index.css
@@ -154,6 +154,7 @@ body,
 .sort_view {
   padding-top: 88px;
   position: relative;
+  margin-right: 2px;
 }
 header {
   height: 50px;
@@ -194,8 +195,21 @@ header h4 {
 .searchbtn {
   top: 50px;
   width: 100%;
+  padding-bottom: 2px;
   position: absolute;
   overflow: hidden;
+}
+.searchbtn .searchimg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 30px;
+  background: #fff;
+  font-size: 20px;
+  line-height: 38px;
+  text-align: center;
+  border-left: 2px solid #E6E6E6;
 }
 .searchbtn .category_nav {
   width: 190%;
@@ -228,7 +242,16 @@ header h4 {
   background-color: #ffffff;
   padding: 10px 5px;
   box-sizing: border-box;
-  overflow: hidden;
+}
+.goodshow #goods li::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 6px;
+  top: -6px;
+  left: 0;
+  background-color: #F7F7F7;
 }
 .goodshow #goods li .gobuy {
   display: block;
@@ -238,9 +261,7 @@ header h4 {
   z-index: 1;
 }
 .goodshow #goods li .pic {
-  position: absolute;
-  top: 0;
-  left: 0;
+  float: left;
   width: 135px;
   height: 130px;
 }
@@ -249,10 +270,154 @@ header h4 {
   height: 130px;
   border: none;
 }
-.goodshow #goods li .t {
-  padding-left: 135px;
-}
-.goodshow #goods li .t .y {
+.goodshow #goods li .info .t .title1 {
   color: #000;
   font-size: 14px;
+}
+.goodshow #goods li .info .t .title2 {
+  margin-top: 4px;
+  height: auto;
+  color: #f10215;
+  font-size: 24px;
+  vertical-align: middle;
+}
+.goodshow #goods li .info .t .title2 i {
+  font-size: 16px;
+  margin-right: 4px;
+  vertical-align: middle;
+}
+.goodshow #goods li .info .t .title2 em {
+  font-size: 12px;
+  vertical-align: middle;
+}
+.goodshow #goods li .info .t .title2 del {
+  color: #a8a8a8;
+  font-size: 12px;
+  margin-left: 12px;
+  vertical-align: middle;
+}
+.goodshow #goods li .info .p {
+  position: absolute;
+  bottom: 10px;
+  padding-left: 135px;
+  width: 100%;
+}
+.goodshow #goods li .info .p .bar {
+  position: relative;
+}
+.goodshow #goods li .info .p .bar .goquan {
+  position: absolute;
+  z-index: 1;
+  height: 60px;
+  width: 120px;
+  bottom: 0px;
+  left: 130px;
+}
+.goodshow #goods li .info .p .bar i {
+  position: relative;
+  box-sizing: border-box;
+  width: 82px;
+  height: 14px;
+  border: 1px solid #fc353a;
+  border-radius: 6px;
+  color: #fff;
+  font-weight: 900;
+  background: #ffb7b7;
+  text-align: center;
+  overflow: hidden;
+  display: inline-block;
+}
+.goodshow #goods li .info .p .bar i em {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  border-radius: 5px;
+  background: #fc353a;
+  display: block;
+  transition: all 0.3s cubic-bezier(0.39, 0.58, 0.57, 1);
+  width: 0;
+}
+.goodshow #goods li .info .p .bar i span {
+  font-size: 12px;
+  line-height: 11px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.goodshow #goods li .info .p .bar b {
+  position: absolute;
+  left: 92px;
+  top: 0;
+  font-size: 12px;
+  font-weight: 400;
+  color: #f10215;
+}
+.goodshow #goods li .info .p > a:nth-child(2) {
+  font-size: 12px;
+  font-weight: 400;
+  display: block;
+  float: left;
+  color: #f10215;
+  padding: 5px;
+  border: 1px dashed #f10215;
+}
+.goodshow #goods li .info .p > a:nth-child(3) {
+  float: right;
+  margin-right: 10px;
+  padding: 5px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #ff5e5d;
+}
+/*底部*/
+.m_foot {
+  /*底部登陆*/
+  /*尾部*/
+}
+.m_foot .m_login {
+  margin-top: 10px;
+  background: #efefef;
+  border-top: 1px solid #c4c4c4;
+  border-bottom: 1px solid #c4c4c4;
+  height: 34px;
+  line-height: 34px;
+  margin-top: 25px;
+  clear: both;
+}
+.m_foot .m_login a {
+  box-sizing: border-box;
+  float: left;
+  font-size: 14px;
+  border-right: 1px solid #c4c4c4;
+  text-align: center;
+  width: 30%;
+}
+.m_foot .m_login a span {
+  color: gray;
+}
+.m_foot .m_footer {
+  background: #efefef;
+  text-align: center;
+  font-size: 12px;
+  padding: 15px 0;
+  color: #666;
+}
+.m_foot .m_footer .m_ch {
+  font-size: 16px;
+}
+.m_foot .m_footer .m_en {
+  font-size: 14px;
+}
+/*返回顶部图标*/
+.m_iconTop {
+  display: inline;
+  position: fixed;
+  right: 6px;
+  bottom: 10px;
+  z-index: 999;
 }
